zokrates_cli/examples/compile_errors/double_power.zok
def main():
    field a = 1**2**3 // parentheses are required here
    return